--- a/Project_01/index.html
+++ b/Project_01/index.html
@@ -153,13 +153,13 @@
              <a href="#!"> <img src="./img/course-1.jpg" alt="Basic web design" class="thumb"></a>
                 <div class="info">
                   <div class="head">
-                    <h3 class="title"><a href="#!">Basic web design </a></h3>
+                    <h3 class="title"><a href="#!" class=".line-clamp break-all">Basic web design </a></h3>
                       <div class="rating">
                         <img src="./icon/Star.svg" alt="" class="star">
                         <span class="value">4.5</span>
                       </div>
                   </div>
-                <p class="desc">Get the best course, gain knowledge and shine for your future career.</p>
+                <p class="desc line-clamp line-2 break-all">Get the best course, gain knowledge and shine for your future career.</p>
                 <div class="foot">
                   <span class="price">$120.75</span>
                   <button class="btn btn-book">Book Now</button>
@@ -173,13 +173,13 @@
                 <a href="#!"><img src="./img/course-2.jpg" alt="UI/UX design" class="thumb"></a>
                   <div class="info">
                     <div class="head">
-                      <h3 class="title"><a href="#!">UI/UX design</a></h3>
+                      <h3 class="title"><a href="#!" class=".line-clamp break-all">UI/UX design</a></h3>
                         <div class="rating">
                           <img src="./icon/Star.svg" alt="" class="star">
                           <span class="value">4.5</span>
                         </div>
                     </div>
-                  <p class="desc">Get the best course, gain knowledge and shine for your future career.</p>
+                  <p class="desc line-clamp line-2 break-all">Get the best course, gain knowledge and shine for your future career.</p>
                   <div class="foot">
                     <span class="price">$120.75</span>
                     <button class="btn btn-book">Book Now</button>
@@ -193,13 +193,13 @@
               <a href="#!"><img src="./img/course-3.jpg" alt="Web App design" class="thumb"></a>
                 <div class="info">
                   <div class="head">
-                    <h3 class="title"><a href="#!">Web App design</a></h3>
+                    <h3 class="title"><a href="#!" class=".line-clamp break-all">Web App design</a></h3>
                       <div class="rating">
                         <img src="./icon/Star.svg" alt="" class="star">
                         <span class="value">4.5</span>
                       </div>
                   </div>
-                <p class="desc">Get the best course, gain knowledge and shine for your future career.</p>
+                <p class="desc line-clamp line-2 break-all">Get the best course, gain knowledge and shine for your future career.</p>
                 <div class="foot">
                   <span class="price">$120.75</span>
                   <button class="btn btn-book">Book Now</button>
